--- a/pondeye/assets/css/main.css
+++ b/pondeye/assets/css/main.css
@@ -35,6 +35,8 @@ body {
 	  background-image: url("images") ;
 }
 
+
+
 .fullscreen-bg {
   position: fixed;
   top: 0;
@@ -112,15 +114,15 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "montserrat-bold", sans-serif;
+	font-family: 'Black Ops One', cursive;
 	color: #69BB7B;
 	font-style: normal;
 	text-rendering: optimizeLegibility;
-	margin: 18px 0 15px;
+	margin: 10px 10px 15px;
+	font-size:100px;
+	font-weight: 800;
 }
 
-h1 a,
-h2 a,
 h3 a,
 h4 a,
 h5 a,
@@ -129,15 +131,19 @@ h6 a {
 }
 
 h1 {
-	font-size: 30px;
-	line-height: 36px;
+	font-size: 100px;
+	line-height: 100px;
 	margin-top: 0;
 	letter-spacing: -1px;
 }
 
 h2 {
-	font-size: 24px;
-	line-height: 30px;
+	font-size: 50px;
+	line-height: 50px;
+font-family: 'Black Ops One', cursive;
+	font-weight: 700;
+	position: 0;
+
 }
 
 h3 {
@@ -167,7 +173,7 @@ h6 {
 }
 
 p {
-	margin: 15px 0 15px 0;
+	margin: 10px 0 10px 0;
 }
 
 p img {
@@ -553,16 +559,26 @@ main::after {
 }
 
 main h1 {
-	font: 38px/1.2em "montserrat-bold", sans-serif;
+font-family: 'Black Ops One', cursive;
 	color: #69BB7B;
-	margin-bottom: 12px;
+	margin-bottom: 20px;
+	font-size: 150px;
+	font-weight: 900;
 	padding: 0;
 }
 
+#imagine{
+color:#6A5ACD;
+font-size: 50px;
+font-weight:700;
+
+}
 main p {
-	font: 17px/36px "montserrat-regular", sans-serif;
-	color: ##EF1C15;
-	margin-bottom: 18px;
+	font-family: 'Black Ops One', cursive;
+	color: #FFFF;
+	margin-bottom: 30px;
+	font-weight: 900;
+	 font-size: 20px;
 	padding: 0;
 }
 
@@ -577,21 +593,18 @@ main hr {
 main .site-header .logo {
 	display: inline-block;
 	vertical-align: middle;
-	margin: 0 0 36px 0;
+	margin: 0 0 0px 0;
 	padding: 0;
 }
 
 main .site-header .logo a {
 	display: block;
-	margin: 0;
-	padding: 0;
 	border: none;
 	outline: none;
-	font: 0/0 a;
 	text-shadow: none;
 	color: transparent;
-	width: 300px;
-	height: 300px;
+	width: 250px;
+	height: 250px;
 	background: url("images/advent/logo/logo.png") no-repeat;
 	background-size: contain;
 	opacity: .5;
@@ -607,7 +620,7 @@ main .site-header .logo a {
 	}
 
 	main h1 {
-		font: 35px/1.2em "montserrat-bold", sans-serif;
+		font: 100px/1.2em "montserrat-bold", sans-serif;
 	}
 
 	main p {
@@ -615,7 +628,7 @@ main .site-header .logo a {
 	}
 
 	main .site-header .logo {
-		margin: 0 0 30px 0;
+		margin: 0 0 0px 0;
 	}
 
 	main .site-header .logo a {
@@ -631,7 +644,7 @@ main .site-header .logo a {
 	}
 
 	main h1 {
-		font: 32px/1.2em "montserrat-bold", sans-serif;
+		font: 100px/1.2em "montserrat-bold", sans-serif;
 	}
 
 	main p {
@@ -639,7 +652,7 @@ main .site-header .logo a {
 	}
 
 	main .site-header .logo {
-		margin: 0 0 24px 0;
+		margin: 0 0 0px 0;
 	}
 
 }
@@ -669,7 +682,7 @@ main .site-header .logo a {
 	}
 
 	main h1 {
-		font: 28px/1.2em "montserrat-bold", sans-serif;
+		font: 100px/1.2em "montserrat-bold", sans-serif;
 	}
 
 	main p {
@@ -677,8 +690,8 @@ main .site-header .logo a {
 	}
 
 	main .site-header .logo a {
-		width: 95px;
-		height: 66px;
+		width: 100px;
+		height: 100px;
 	}
 
 }
@@ -776,6 +789,7 @@ main .site-header .logo a {
 	clear: both;
 	width: 75%;
 	margin: 6px auto 30px;
+	font-family: 'Black Ops One', cursive;
 }
 
 #mc-signup input {
@@ -783,7 +797,7 @@ main .site-header .logo a {
 	float: left;
 	border: none;
 	font-size: 15px;
-	font-family: "montserrat-bold", sans-serif;
+	font-family: 'Black Ops One', cursive;
 }
 
 #mc-signup input[type="email"] {
@@ -824,7 +838,7 @@ main .site-header .logo a {
 	display: block;
 	width: 100%;
 	min-height: 30px;
-	font-family: "montserrat-regular", sans-serif;
+font-family: 'Black Ops One', cursive;
 	color:#EF1C15
 }
 
@@ -1162,7 +1176,7 @@ main .site-header .logo a {
 }
 
 .about-header h1 {
-	font: 38px/1.2em "montserrat-bold", sans-serif;
+	font: 100px/1.2em "montserrat-bold", sans-serif;
 	color: #69BB7B;
 }
 
@@ -1194,11 +1208,11 @@ main .site-header .logo a {
 	}
 
 	.about-header h1 {
-		font: 35px/1.2em "montserrat-bold", sans-serif;
+		font: 100px/1.2em "montserrat-bold", sans-serif;
 	}
 
 	.about-header .icon-wrap i {
-		width: 61px;
+		width: 100px;
 		height: 50px;
 	}
 
@@ -1210,7 +1224,7 @@ main .site-header .logo a {
 	}
 
 	.about-header h1 {
-		font: 32px/1.2em "montserrat-bold", sans-serif;
+		font: 100px/1.2em "montserrat-bold", sans-serif;
 	}
 
 	.about-header .icon-wrap {
@@ -1232,7 +1246,7 @@ main .site-header .logo a {
 	}
 
 	.about-header h1 {
-		font: 30px/1.2em "montserrat-bold", sans-serif;
+		font: 100px/1.2em "montserrat-bold", sans-serif;
 	}
 
 }
@@ -1475,13 +1489,19 @@ main .site-header .logo a {
 	color: #69BB7B;
 }
 
+#shadow {
+  font-size:28px;
+  font-weight:bold;
+  text-shadow:0 4px 8px #666, 0 6px 16px #999;
+}
+
 /*
 /* 07. =footer
 /* =================================================================== */
 footer {
 	clear: both;
 	font: 12px/24px "montserrat-regular", sans-serif;
-	background: #000;
+	background:#FFFFFF;
 	padding: 18px 30px;
 	color: #303030;
 	width: 100%;
@@ -1595,4 +1615,11 @@ footer a:focus {
 		margin: 0 6px;
 	}
 
+
 }
+
+
+
+
+
+
